--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,408 @@
-.App {
+/*boiler plate styling*/
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+:root {
+  --midnightBlue: #0B3D91;
+  --oriolesOrange: #FC3D21;
+  --translucentWhite: rgba(255,255,255,0.3);
+}
+
+/* width */
+html::-webkit-scrollbar,
+div::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+/* Track */
+html::-webkit-scrollbar-track,
+div::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 20px;
+}
+
+/* Handle */
+html::-webkit-scrollbar-thumb,
+div::-webkit-scrollbar-thumb {
+  background: #9e9e9e;
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+html::-webkit-scrollbar-thumb:hover,
+div::-webkit-scrollbar-thumb:hover {
+  background: #797979;
+}
+
+
+/*base styling*/
+h1,h2,h3,h4,h5,
+p,a,span,label,
+button,input,select,
+.link {
+  font-family: 'Open Sans';
+  font-weight: 300;
+  color: #fff;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.link {
+  text-decoration: none;
+}
+
+button,
+input,
+select {
+  outline: none;
+  border: none;
+}
+
+button:hover,
+input:hover,
+select:hover {
+  cursor: pointer;
+}
+
+button {
+  height: max-content;
+  width: max-content;
+  padding: 30px 25px;
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  background-color: #fff;
+  color: var(--midnightBlue);
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+button:hover,
+.button-small:hover {
+  background-color: var(--midnightBlue);
+  color: #fff;
+}
+
+button:active,
+.button-small:active {
+  background-color: #fff;
+  color: var(--midnightBlue);
+}
+
+.button-clear {
+  padding: 0px;
+  clip-path: none;
+}
+
+.button-clear,
+.button-clear:hover,
+.button-clear:active {
+  background-color: transparent;
+}
+
+.button-clear:hover {
+  filter: brightness(90%);
+  transform: scale(1.2);
+}
+
+.button-clear:active {
+  filter: brightness(80%);
+}
+
+.button-small {
+  padding: 10px 20px;
+  border-radius: 25px;
+  clip-path: none;
+  font-size: 16px;
+}
+
+input {
+  color: silver;
+}
+
+img {
+  object-fit: cover;
+}
+
+.col,
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.col {
+  flex-direction: column;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.round {
+  border-radius: 5px;
+}
+
+.rounder {
+  border-radius: 50px;
+}
+
+.transition {
+  transition: 0.3s;
+}
+
+.hidden {
+  opacity: 0%;
+  visibility: hidden;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.screen,
+.screen__section,
+.screen__section-med,
+.screen__section-small {
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
+.screen {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: max-content;
+  justify-content: flex-start;
 }
 
-.App-link {
-  color: #61dafb;
+.screen__section {
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.screen__section-med {
+  height: 80vh;
+}
+
+.screen__section-small {
+  height: 40vh;
+}
+
+.input-large {
+  padding: 15px;
+  width: 90%;
+  font-size: 18px;
+}
+
+.input-small {
+  width: 275px;
+  height: max-content;
+  padding: 5px;
+  font-family: 'Open Sans';
+}
+
+.translucentBack {
+  background-color: var(--translucentWhite);
+}
+
+.icon-med {
+  height: 30px;
+  width: 30px;
+}
+
+.icon-small {
+  height: 20px;
+  width: 20px;
+}
+
+.loadingGif {
+  position: absolute;
+  top: 55%;
+  left: 47.5%;
+}
+
+
+/********************************/
+
+.App {
+  position: relative;
+}
+
+.backgroundVideo,
+.navSlider {
+  height: 100vh;
+  position: fixed;
+}
+
+.backgroundVideo {
+  width: 100%;
+  object-fit: cover;
+  filter: brightness(65%);
+  z-index: -5;
+}
+
+.navSlider {
+  width: 300px;
+  left: -12%;
+  z-index: 5;
+  background-color: #000;
+  border-right: 1px solid rgba(255,255,255, 0.3);
+}
+
+.navSlider--shown {
+  left: 0%;
+}
+
+.navSlider__btn-wrapper,
+.navSlider__tab-wrapper {
+  width: 100%;
+}
+
+.navSlider__btn-wrapper {
+  position: relative;
+  height: 10%;
+}
+
+.navSlider__tab-wrapper {
+  height: 90%;
+}
+
+.navSlider__tab-wrapper .link {
+  width: 100%;
+  padding: 0px 20px;
+}
+
+.navSlider__btn {
+  position: absolute;
+  top: 15%;
+  right: 6.5%;
+}
+
+.navSlider__tab:hover {
+  background-color: var(--translucentWhite);
+}
+
+.navSlider__tab * {
+  margin: 3px 0px;
+}
+
+.navSlider__tab--inner {
+  width: 60%;
+}
+
+.navSlider__tab--active {
+  background-color: var(--translucentWhite);
+}
+
+.home__contact {
+  height: 62.5%;
+  width: 70%;
+}
+
+.home__txtarea {
+  height: 275px;
+  width: 700px;
+  font-size: 14px;
+  outline: none;
+  resize: none;
+  padding: 5px;
+  font-family: 'Open Sans';
+}
+
+.apod__input-wrapper {
+  width: 23%;
+}
+
+.apod__comp-wrapper {
+  width: 85%;
+  height: max-content;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding-top: 25px;
+}
+
+.apod__comp {
+  width: 23%;
+  justify-content: flex-start;
+  min-height: 400px;
+  height: 400px;
+  margin-left: 25px;
+  margin-bottom: 25px;
+  padding: 0px 10px;
+  padding-bottom: 10px;
+  overflow-y: auto;
+  background-size: cover;
+  border: 2px solid var(--translucentWhite);
+}
+
+.apod__comp * {
+  margin-top: 10px;
+}
+
+.apod__comp h4 {
+  letter-spacing: 1px;
+}
+
+.apod__error-msg {
+  position: absolute;
+  top: 94.5%;
+}
+
+.apod__gallery {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  justify-content: flex-end; 
+  padding-bottom: 20px;
+}
+
+.earth__input,
+.epic__input {
+  width: 40%;
+}
+
+.earth__wrapper {
+  height: 100%;
+  width: 80%;
+}
+
+.earth__img {
+  height: 90%;
+  width: 85%;
+  object-fit: cover;
+}
+
+.earth__loading {
+  position: absolute;
+  top: 60%;
+  width: 20%;
+  padding: 10px 0px;
+  background-color: #fff;
+}
+.epic__img-cont-wrapper,
+.mrp__cont-wrapper,
+.neo__cont-wrapper {
+  height: max-content;
+}
+
+.epic__img-cont,
+.mrp__cont,
+.neo_cont {
+  margin-bottom: 100px;
+  background-color: #000;
+  padding: 20px 25px;
+  box-shadow: 0px 0px 5px rgba(255,255,255,0.2);
+}
+
+.epic__img,
+.mrp__img {
+  height: 900px;
+  max-width: 90%;
 }
